[release/ilencina-svc112] Fix horizontal scroll when the height increase.

--- a/app/src/app/formula/components/formula-drop-space/formula-drop-space.component.scss
+++ b/app/src/app/formula/components/formula-drop-space/formula-drop-space.component.scss
@@ -5,7 +5,7 @@ div.draggable-space-container {
   margin-top: 0.6rem;
   display: flex;
   align-items: center;
-  overflow-x: auto;
+  overflow: auto;
   white-space: nowrap;
   width: 100%;
   position: relative;
